@@ -254,6 +254,15 @@ namespace Castle.MicroKernel
 		/// <returns></returns>
 		TService[] ResolveServices<TService>();
 
+		/// <summary>
+		/// Returns a component instance by the key
+		/// </summary>
+		/// <param name="key"></param>
+		/// <param name="service"></param>
+		/// <param name="arguments"></param>
+		/// <returns></returns>
+		object Resolve(String key, Type service, IDictionary arguments);
+		
 		#endif
 		
 		/// <summary>
