@@ -263,6 +263,28 @@ namespace Castle.Windsor
 		/// Returns a component instance by the service
 		/// </summary>
 		/// <param name="service"></param>
+		/// <param name="arguments"></param>
+		/// <returns></returns>
+		public virtual object Resolve(Type service, IDictionary arguments)
+		{
+			return kernel.Resolve(service, arguments);
+		}
+
+		/// <summary>
+		/// Returns a component instance by the key
+		/// </summary>
+		/// <param name="key"></param>
+		/// <param name="arguments"></param>
+		/// <returns></returns>
+		public virtual object Resolve(String key, IDictionary arguments)
+		{
+			return kernel.Resolve(key, arguments);
+		}
+
+		/// <summary>
+		/// Returns a component instance by the service
+		/// </summary>
+		/// <param name="service"></param>
 		/// <returns></returns>
 		public virtual object Resolve(Type service)
 		{
@@ -298,6 +320,41 @@ namespace Castle.Windsor
 			return kernel[key];
 		}
 
+
+		/// <summary>
+		/// 
+		/// </summary>
+		/// <param name="key"></param>
+		/// <param name="service"></param>
+		/// <param name="arguments"></param>
+		/// <returns></returns>
+		public virtual object Resolve(String key, Type service, IDictionary arguments)
+		{
+			return kernel.Resolve(key, service, arguments);
+		}
+		
+		/// <summary>
+		/// Returns a component instance by the service 
+		/// </summary>
+		/// <typeparam name="T"></typeparam>
+		/// <param name="arguments"></param>
+		/// <returns></returns>
+		public T Resolve<T>(IDictionary arguments)
+		{
+			return (T) Resolve(typeof(T), arguments);
+		}
+
+		/// <summary>
+		/// Returns a component instance by the key
+		/// </summary>
+		/// <param name="key"></param>
+		/// <param name="arguments"></param>
+		/// <returns></returns>
+		public virtual T Resolve<T>(String key, IDictionary arguments)
+		{
+			return (T) Resolve(key, typeof(T), arguments);
+		}
+
 		/// <summary>
 		/// Returns a component instance by the service 
 		/// </summary>
@@ -305,7 +362,7 @@ namespace Castle.Windsor
 		/// <returns></returns>
 		public T Resolve<T>()
 		{
-			return (T) Resolve(typeof(T));
+			return (T)Resolve(typeof(T));
 		}
 
 		/// <summary>
@@ -315,9 +372,8 @@ namespace Castle.Windsor
 		/// <returns></returns>
 		public virtual T Resolve<T>(String key)
 		{
-			return (T) Resolve(key, typeof(T));
+			return (T)Resolve(key, typeof(T));
 		}
-
 #endif
 
 		/// <summary>
